# terminal

./: .gitmodules  README.ja.md  README.md
src/cascadia/SharingEngine/: CMakeLists.txt  Client.cpp  Client.h  Protocol.cpp  Protocol.h  README.md  Server.cpp  Server.h  SharingTransportClient.h  SharingTransportServer.cpp  SharingTransportServer.h  WebSocket.cpp  WebSocket.h
src/cascadia/SharingEngine/test/: Orchestration.test.cpp  Protocol.test.cpp  WebSocket.test.cpp
src/cascadia/SharingEngine/tools/: Check-PaneShare.ps1  Enable-OpenSSHServer.ps1  README.md
src/cascadia/TerminalApp/: AppActionHandlers.cpp  AppLogic.cpp  BrowserContent.cpp  BrowserContent.h  FileBrowserContent.cpp  FileBrowserContent.h  Pane.cpp  Pane.h  PaneShareSession.cpp  PaneShareSession.h  RemoteConnection.cpp  RemoteConnection.h  SharingTransportClient.cpp  SharingTransportClient.h  SharingTransportServer.cpp  SharingTransportServer.h  Tab.cpp  Tab.h  TabHeaderControl.xaml  TerminalAppLib.vcxproj  TerminalPage.cpp  TerminalPage.h  TerminalTabStatus.h  TerminalTabStatus.idl  WingetContent.cpp  WingetContent.h
src/cascadia/TerminalControl/: ControlCore.cpp  ControlCore.h  ControlCore.idl  TermControl.cpp  TermControl.h  TermControl.idl
src/cascadia/TerminalCore/: Terminal.cpp  Terminal.hpp
src/cascadia/TerminalSettingsModel/: ActionAndArgs.cpp  ActionMap.cpp  AllShortcutActions.h  CascadiaSettings.h  CascadiaSettings.idl  CascadiaSettingsSerialization.cpp  GlobalAppSettings.idl  MTSMSettings.h  defaults.json
src/cascadia/TerminalSettingsModel/Resources/en-US/: Resources.resw
